package ontap.decorator.bt1;

public class BasicImage implements Image{
    @Override
    public void Show() {
        System.out.println("Hien thi anh");
    }
}
