package ontap.decorator.bt1;

public interface Image {
    public void Show();
}
